search component, pagination, minimal css styles

--- a/src/app/giphy-list-item/giphy-list-item.component.html
+++ b/src/app/giphy-list-item/giphy-list-item.component.html
@@ -1,3 +1,4 @@
-<div>
-  <img src='{{"https://media.giphy.com/media/"+ gif.id +"/source.gif"}}'>
+ <div class="card">
+    <img src='{{"https://media.giphy.com/media/"+ gif.id +"/source.gif"}}' title="" alt="giphy image">
+    <p class="card-text">{{gif.title}}</p>
 </div>
