--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,6 @@
-<app-giphy-list></app-giphy-list>
+<main role="main">
+  <app-giphy-search></app-giphy-search>
+  <app-giphy-list></app-giphy-list>
+</main>
 
 
